@@ -15,9 +15,7 @@ import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.Serializable;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 public class CompiledParameters implements Serializable {
 	
@@ -53,21 +51,29 @@ public class CompiledParameters implements Serializable {
 		this.wrap = wrap;
 	}
 
-	public String serialize() throws IOException{
-		ByteArrayOutputStream bos = new ByteArrayOutputStream();
-		ObjectOutputStream ois = new ObjectOutputStream(bos);
-		ois.writeObject(this);
-		return new BASE64Encoder().encode(bos.toByteArray());
-	}
-	
-	public static CompiledParameters deserialize(String base64String) throws IOException,ClassNotFoundException{
-		if(base64String==null||base64String.length()==0)return new CompiledParameters();
-		byte[] bytes = new BASE64Decoder().decodeBuffer(base64String); 
-		ByteArrayInputStream bis = new ByteArrayInputStream(bytes);
-		ObjectInputStream ois = new ObjectInputStream(bis);
-		return (CompiledParameters)ois.readObject();
-	}
-	
+    public String serialize() throws IOException {
+        ObjectOutputStream ois = null;
+        try {
+            ByteArrayOutputStream bos = new ByteArrayOutputStream();
+            ois = new ObjectOutputStream(bos);
+            ois.writeObject(this);
+            return new String(Base64.getEncoder().encode(bos.toByteArray()));
+        } finally {
+            ois.close();
+        }
+    }
+
+    public static CompiledParameters deserialize(String base64String) throws IOException, ClassNotFoundException {
+        ObjectInputStream ois = null;
+        try {
+            if (base64String == null || base64String.length() == 0)
+                return new CompiledParameters();
+            byte[] bytes = Base64.getDecoder().decode(base64String);
+            ByteArrayInputStream bis = new ByteArrayInputStream(bytes);
+            ois = new ObjectInputStream(bis);
+            return (CompiledParameters) ois.readObject();
+        } finally {
+            ois.close();
+        }
+    }
 }
-
-
